[SYNCOPE-1956] Ensure to build empty multivalue attrs (#1324)